# PVDisplayTouch

./: README.md  SquareLine_Project.sll  SquareLine_Project.spj  Themes.slt  platformio.ini
assets/: PV.xcf
components/: Batteriewert.ecomp
include/: lv_conf.h
src/: CMakeLists.txt  filelist.txt  main.cpp  touch.h  ui.c  ui.h
src/components/: ui_comp.c  ui_comp.h  ui_comp_batteriewert.c  ui_comp_batteriewert.h  ui_comp_hook.c  ui_comp_hook.h
src/images/: ui_img_akku_png.c  ui_img_haus_png.c  ui_img_netz_png.c  ui_img_pot_ver_knob_png.c  ui_img_pot_ver_line_png.c  ui_img_pv_png.c
src/screens/: ui_Init.c  ui_OTA.c  ui_PV.c
